fix: reduce input 'select element' seperator width on mobile devices

--- a/Piggyvest Signup Page Clone/style.css
+++ b/Piggyvest Signup Page Clone/style.css
@@ -208,5 +208,6 @@ footer a:hover {
 
     i {
         margin-top: 9px;
+        -webkit-text-stroke: 2.4px #eef4f5fa;
     }
 }
